neural_coder_workspace/bench16617453035904105/performance.log
  File "/home2/longxin/Neural_Coder_EXT/tmp.py", line 399
    if not False: # [coder-enabled]
    ^
SyntaxError: invalid syntax
